[package]
name = "euola-vm"
version = "0.5.0"
authors = ["sisungo <sisungo@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
ansi_term = "0.12"
anyhow = "1.0"
dashmap = { version = "4.0", features = ["rayon"] }
once_cell = "1.5"
parking_lot = "0.11"
rayon = "1.5"
getrandom = "0.2"
rand_chacha = "0.3"
rand_core = "0.6"
smallvec = "1.6"
ctrlc = "3.1"
num_cpus = "1.13"
mimalloc = { version = "0.1", optional = true }
chrono = "0.4"
libloading = { version = "0.7", optional = true }
libc = "0.2"

[dependencies.libffi]
version = "1.0"
features = ["system"]
optional = true

[features]
default = ["fast-alloc", "cffi"]
fast-alloc = ["mimalloc"]
cffi = ["libffi", "libloading"]
